// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a tag placeholder image correctly 1`] = `
<div
  className="src-components-image-placeholder-index__medium src-components-image-placeholder-index__base"
  role="presentation"
>
  <FaTags
    className="src-components-image-placeholder-index__icon"
  />
</div>
`;

exports[`should render a talent placeholder image correctly 1`] = `
<div
  className="src-components-image-placeholder-index__medium src-components-image-placeholder-index__base"
  role="presentation"
>
  <FaUser
    className="src-components-image-placeholder-index__icon"
  />
</div>
`;

exports[`should render a user placeholder image correctly 1`] = `
<div
  className="src-components-image-placeholder-index__medium src-components-image-placeholder-index__base"
  role="presentation"
>
  <FaCogs
    className="src-components-image-placeholder-index__icon"
  />
</div>
`;

exports[`should render a venue placeholder image correctly 1`] = `
<div
  className="src-components-image-placeholder-index__medium src-components-image-placeholder-index__base"
  role="presentation"
>
  <FaBank
    className="src-components-image-placeholder-index__icon"
  />
</div>
`;

exports[`should render an event placeholder image correctly 1`] = `
<div
  className="src-components-image-placeholder-index__medium src-components-image-placeholder-index__base"
  role="presentation"
>
  <FaStarO
    className="src-components-image-placeholder-index__icon"
  />
</div>
`;

exports[`should render an event series placeholder image correctly 1`] = `
<div
  className="src-components-image-placeholder-index__medium src-components-image-placeholder-index__base"
  role="presentation"
>
  <FaStarO
    className="src-components-image-placeholder-index__icon"
  />
</div>
`;
